Modifies getAbstractions (at both RT and Tree level) for babyDS induction.