@@ -36,6 +36,16 @@ public abstract class TTRFormula extends Formula {
 	private static final long serialVersionUID = 1L;
 
 	protected static final Logger logger = Logger.getLogger(TTRFormula.class);
+	public static int abstractionOrder = 1;  // AA added this to keep track of the abstraction order.
+    public static final String ANSI_RESET = "\u001B[0m";
+    public static final String ANSI_GREEN = "\u001B[32m";
+    public static final String ANSI_YELLOW = "\u001B[33m";
+    public static final String ANSI_BLUE = "\u001B[34m";
+    public static final String ANSI_PURPLE = "\u001B[35m";
+    public static final String ANSI_CYAN = "\u001B[36m";
+    public static final String ANSI_RED = "\u001B[31m";
+	public HashMap<Pair<TTRRecordType, BasicType>, List<Pair<TTRRecordType, TTRLambdaAbstract>>> abstractsCache = new HashMap<>();  // TODO
+	// Above added by AA for efficiency. To be integrated later- > a global cache for previous abstractions, so that we don't have to compute them again and again.
 
 	public abstract TTRFormula freshenVars(Tree t);
 	
@@ -83,6 +93,7 @@ public abstract class TTRFormula extends Formula {
 
 	protected List<Tree> getAbstractions(DSType funcType, NodeAddress root, DSType rootType) {
 		List<BasicType> list = funcType.getTypesSubjFirst();
+		logger.trace("list of basic types on funcType " + funcType + " is: " + list);  // added by AA.
 		list.remove(0);
 		return getAbstractions(list, root, rootType);
 	}
@@ -90,45 +101,200 @@ public abstract class TTRFormula extends Formula {
 	
 	protected List<Tree> getAbstractions(List<BasicType> types, NodeAddress root, DSType rootType) {
 		List<Tree> result = new ArrayList<Tree>();
-		logger.debug("abstractions for:" + types);
-		logger.debug("on:" + this);
+		logger.debug("abstractions for: " + types);
+		logger.debug("on: " + this);
 		if (types.isEmpty()) {
 			Tree local = new Tree(root);
 			logger.debug("reached base.. returning one node tree");
 			local.getPointedNode().addLabel(new FormulaLabel(this));
 			local.getPointedNode().addLabel(new TypeLabel(rootType));
 			local.getPointedNode().remove(new Requirement(new TypeLabel(DSType.t)));
-			logger.debug("constructed:" + local);
+			logger.debug("constructed: " + local);
 			result.add(local);
 			return result;
 		}
 
-		BasicType basic = (BasicType) types.get(0);
-
+		BasicType basic = (BasicType) types.getFirst();
 		List<Pair<TTRRecordType, TTRLambdaAbstract>> basicAbstracts = getAbstractions(basic, 1);
+		// AA NEWLY ADDED before getting abstractions, check if it is already computed and stored in the cache:
+//		List<Pair<TTRRecordType, TTRLambdaAbstract>> basicAbstracts;
+//		boolean isTTRRT = this instanceof TTRRecordType;
+//		if (!isTTRRT)
+//			TTRRecordType rtKey = this.;
+//
+//		if (abstractsCache.containsKey(new Pair<>(this, basic))) {
+//			logger.trace("Already in cache: Abstraction of " + basic + " on " + this + " .");
+//			basicAbstracts= abstractsCache.get(new Pair<>(this, basic));
+//			logger.trace("it is: " + basicAbstracts);
+//		} else {
+//			basicAbstracts = getAbstractions(basic, 1);
+//			abstractsCache.put(new Pair<>(this, basic), basicAbstracts);
+//			logger.trace("Updated cache with abstraction of " + basic + " on " + this + " .");
+//		}
 
+//		List<Pair<TTRRecordType, TTRLambdaAbstract>> basicAbstracts = getAbstractions(basic, 1);
+		logger.trace(ANSI_BLUE+"AA got " + basicAbstracts.size()+  " basic abstractions with " + basic + ANSI_RESET);
+		logger.trace(basicAbstracts);
 		for (Pair<TTRRecordType, TTRLambdaAbstract> pair : basicAbstracts) {
 			Tree local = new Tree(root);
-			logger.debug("constructing local tree at:" + root);
+			logger.debug("constructing local tree at: " + root);
 			local.getPointedNode().addLabel(new FormulaLabel(this));
 			local.getPointedNode().addLabel(new TypeLabel(rootType));
 			local.make(BasicOperator.DOWN_0);
 			local.go(BasicOperator.DOWN_0);
 
-			List<Pair<TTRRecordType, TTRLambdaAbstract>> argumentAbstracts = pair.first().getAbstractions(DSType.cn, 1);
-			if (argumentAbstracts.size() == 1) {
+			logger.trace("AA now trying to get cn abstracts on " + pair.first());
+			List<Pair<TTRRecordType, TTRLambdaAbstract>> argumentAbstracts;
+			// AA Same as above, check if it is already computed and stored in the cache:
+			if (abstractsCache.containsKey(new Pair<>(pair.first(), DSType.cn))) {
+				logger.trace("Already in cache: Abstraction of " + DSType.cn + " on " + pair.first() + " .");
+				argumentAbstracts = abstractsCache.get(new Pair<>(pair.first(), DSType.cn));
+				logger.trace("it is: " + argumentAbstracts);
+			} else {
+				argumentAbstracts = pair.first().getAbstractions(DSType.cn, 1); // AA THIS LOOKS SUSPICIOUS
+				abstractsCache.put(new Pair<>(pair.first(), DSType.cn), argumentAbstracts);
+				logger.trace("Updated cache with abstraction of " + DSType.cn + " on " + pair.first() + " .");
+			}
+//			List<Pair<TTRRecordType, TTRLambdaAbstract>> argumentAbstracts = pair.first().getAbstractions(DSType.cn, 1); // AA THIS LOOKS SUSPICIOUS
+			logger.trace(ANSI_PURPLE+"cn abs size:  "+argumentAbstracts.size()+ANSI_RESET);
+			logger.warn(ANSI_RED+"AA changed by me from size=1 to more sizes..." + ANSI_RESET);
+
+			List<Tree> prematureTreeCopies = new ArrayList<>();
+			if (!argumentAbstracts.isEmpty()) {
+				logger.warn(ANSI_RED+"AA DANGEROUS test going on!"+ANSI_RESET);
+//				for (Pair<TTRRecordType, TTRLambdaAbstract> argumentAbstract : argumentAbstracts) {  // AA Replace this with "only the first one"
+				// AA First, make the right node for the first one (here), and then put the rest under it (below).
+				Pair<TTRRecordType, TTRLambdaAbstract> argumentAbstract = argumentAbstracts.getFirst();
 				local.make(BasicOperator.DOWN_1);
 				local.go(BasicOperator.DOWN_1);
-				local.put(new FormulaLabel(argumentAbstracts.get(0).second()));
+				local.put(new FormulaLabel(argumentAbstract.second()));
 				DSType abstractedType = DSType.create(DSType.cn, basic);
 				local.put(new TypeLabel(abstractedType));
 				local.go(BasicOperator.UP_1);
 				local.make(BasicOperator.DOWN_0);
 				local.go(BasicOperator.DOWN_0);
 				local.put(new TypeLabel(DSType.cn));
-				local.put(new FormulaLabel(argumentAbstracts.get(0).first()));
+				local.put(new FormulaLabel(argumentAbstract.first()));
 				local.go(BasicOperator.UP_0);
+
+
+				// AA Now the rest of the argumentAbstracts are supposed to go under this one:
+				for (int i=1; i<argumentAbstracts.size(); i++) {
+					Tree copyLocal = local.clone();
+					Pair<TTRRecordType, TTRLambdaAbstract> argumentAbstractionChildren = argumentAbstracts.get(i);  // AA These should be added under argumentAbstracts.get(0).
+//					local.make(BasicOperator.DOWN_1);
+					copyLocal.go(BasicOperator.DOWN_0);
+					copyLocal.make(BasicOperator.DOWN_1);
+					copyLocal.go(BasicOperator.DOWN_1);
+					copyLocal.put(new FormulaLabel(argumentAbstractionChildren.second()));
+					DSType abstractedType2 = DSType.create(DSType.cn, DSType.cn);
+					copyLocal.put(new TypeLabel(abstractedType2));
+					copyLocal.go(BasicOperator.UP_1);
+					copyLocal.make(BasicOperator.DOWN_0);
+					copyLocal.go(BasicOperator.DOWN_0);
+					copyLocal.put(new TypeLabel(DSType.cn));
+					copyLocal.put(new FormulaLabel(argumentAbstractionChildren.first()));
+					// Here I have to get e abstractions on this NEWWWWW -> I think not just e, but generally lower abstracts... that should include e, and cn hopefully.
+					// update: not anymore, so I will comment it out.
+					copyLocal.go(BasicOperator.UP_0);
+					logger.debug("constructed: " + copyLocal);
+					result.add(copyLocal); // AA I think it's correct.
+//					List<Pair<TTRRecordType, TTRLambdaAbstract>> eAbstracts;
+//					// AA Same as above, check if it is already computed and stored in the cache:
+//					if (abstractsCache.containsKey(new Pair<>(argumentAbstractionChildren.first(), DSType.e))) {
+//						logger.trace("Already in cache: Abstraction of " + DSType.e + " on " + argumentAbstractionChildren.first() + " .");
+//						eAbstracts = abstractsCache.get(new Pair<>(argumentAbstractionChildren.first(), DSType.e));
+//						logger.trace("it is: " + eAbstracts);
+//					} else {
+//						logger.warn(ANSI_RED+"AA newVarSuffix might be wrong here. Please double-check!"+ANSI_RESET);
+//						eAbstracts = argumentAbstractionChildren.first().getAbstractions(DSType.e, 3); // AA THIS LOOKS SUSPICIOUS
+//						abstractsCache.put(new Pair<>(argumentAbstractionChildren.first(), DSType.e), eAbstracts);
+//						logger.trace("Updated cache with abstraction of " + DSType.e + " on " + argumentAbstractionChildren.first() + " .");
+//					}
+////					List<Pair<TTRRecordType, TTRLambdaAbstract>> eAbstractsOnArg = argumentAbstractionChildren.first().getAbstractions(DSType.e, 3);
+//					logger.trace(ANSI_PURPLE + "e abs size: " + eAbstracts.size() + ANSI_RESET);
+//					if (eAbstracts.size() == 1) {
+//							copyLocal.make(BasicOperator.DOWN_1);
+//							copyLocal.go(BasicOperator.DOWN_1);
+//							copyLocal.put(new FormulaLabel(eAbstracts.getFirst().second()));
+//							DSType abstractedTypeE = DSType.create(DSType.e, DSType.cn);
+//							copyLocal.put(new TypeLabel(abstractedTypeE));
+//							copyLocal.go(BasicOperator.UP_1);
+//							copyLocal.make(BasicOperator.DOWN_0);
+//							copyLocal.go(BasicOperator.DOWN_0);
+//							copyLocal.put(new TypeLabel(DSType.e));
+//							copyLocal.put(new FormulaLabel(eAbstracts.getFirst().first()));
+//							copyLocal.go(BasicOperator.UP_0);
+//							logger.debug("constructed: " + copyLocal);
+//							result.add(copyLocal); // AA I think it's correct.
+////							logger.info(ANSI_GREEN+"abstraction order " + abstractionOrder + ANSI_RESET);
+////							abstractionOrder++;
+////							logger.info("added: " + copyLocal);
+//					} else {
+//						logger.warn(ANSI_RED+"e abs size is not 1 and this is the [e-ttt] case. So I'm going to try sth super nasty: "+ANSI_RESET);
+////						result.add(copyLocal);  // todo
+//
+//					}
+//					copyLocal.go(BasicOperator.UP_0);
+					copyLocal.go(BasicOperator.UP_0);
+
+					// This used to happen outside argument == 1, why does it have to be here now?  // todo this shouldn't be pair, but should be eAbs?
+					logger.warn(ANSI_RED+"AA DANGEROUS test!"+ANSI_RESET);
+					copyLocal.put(new TypeLabel(basic));
+					copyLocal.put(new FormulaLabel(pair.first()));
+					copyLocal.go(BasicOperator.UP_0);
+					copyLocal.make(BasicOperator.DOWN_1);
+					copyLocal.go(BasicOperator.DOWN_1);
+					copyLocal.put(new FormulaLabel(pair.second()));
+					DSType abstractedTypeLeft = DSType.create(basic, rootType);
+					copyLocal.put(new TypeLabel(abstractedTypeLeft));
+					logger.debug("constructed ash: " + copyLocal);
+
+					logger.trace("trying to get lower abstracts of: " + pair.second());
+					List<Tree> lowerAbstracts;
+					// aa fixing the below bug with a try-catch, see what happens. It's doing the job, but is it ok? idk.
+					logger.trace(ANSI_RED+"AA doing some unverified try-catch here for lower abstracts..."+ANSI_RESET);
+					try {
+						lowerAbstracts = pair.second().getAbstractions(types.subList(1, types.size()), copyLocal.getPointer(), abstractedTypeLeft);
+					}
+					catch (Exception e) {
+						logger.warn(ANSI_RED + "AA lower abstractions is empty." + ANSI_RESET);
+						lowerAbstracts = new ArrayList<>();
+					}
+					logger.trace("Ashraf lower abstracts are: " + lowerAbstracts);
+					logger.debug("now merging: " + copyLocal);
+					for (Tree lower : lowerAbstracts) {
+						logger.debug("with root= " + lower.getRootNode().getAddress());
+						logger.debug("with: " + lower);
+						Tree merged = copyLocal.merge(lower);
+						if (merged.keySet().contains(merged.getPointer().down1()))
+							merged.go(BasicOperator.DOWN_1);
+						logger.warn(ANSI_RED+"AA very dangerous test here!"+ANSI_RESET);
+						prematureTreeCopies.add(merged);
+//						logger.trace("ashraf size prematureTreeCopies size: " + prematureTreeCopies.size());
+//						logger.trace("prematureTreeCopies: " + prematureTreeCopies);
+						// TODO do I have to add to result here?
+//						local.merge(merged);
+//						result.add(local);
+//						result.add(merged);
+					}
+					if (lowerAbstracts.isEmpty()) {
+//						logger.warn(ANSI_RED+"AA lower abstractions is empty. doing sth dodgy"+ANSI_RESET);
+						prematureTreeCopies.add(copyLocal); // donno if this is correct.
+						// I think merging and adding to result should be done here to make it work...
+					}
+					logger.trace("ash prematureTreeCopies size: " + prematureTreeCopies.size());
+
+//					else {
+//						logger.warn(ANSI_RED + "AA lower abstractions is empty. doing sth dodgy" + ANSI_RESET);
+//						result.add(copyLocal); // donno if this is correct.
+						// I think merging and adding to result should be done here to make it work...
+//					}
+				}
 			}
+
+			logger.debug("len of prematureTreeCopies: " + prematureTreeCopies.size());
+//			logger.warn(ANSI_RED+"AA DANGEROUS commented out by AA below here!"+ANSI_RESET);
 			local.put(new TypeLabel(basic));
 			local.put(new FormulaLabel(pair.first()));
 			local.go(BasicOperator.UP_0);
@@ -137,22 +303,45 @@ public abstract class TTRFormula extends Formula {
 			local.put(new FormulaLabel(pair.second()));
 			DSType abstractedType = DSType.create(basic, rootType);
 			local.put(new TypeLabel(abstractedType));
-			logger.debug("constructed:" + local);
-			List<Tree> lowerAbstracts = pair.second().getAbstractions(types.subList(1, types.size()),
-					local.getPointer(), abstractedType);
-			logger.debug("now merging:" + local);
+			logger.debug("constructed: " + local);
+			logger.trace("trying to get lower abstracts of: " + pair.second());
+			List<Tree> lowerAbstracts = pair.second().getAbstractions(types.subList(1, types.size()), local.getPointer(), abstractedType);
+			logger.trace("lower abstracts size: " + lowerAbstracts.size());
+			logger.trace("lower abstracts are: " + lowerAbstracts);
+			logger.debug("now merging: " + local);
 			for (Tree lower : lowerAbstracts) {
-				logger.debug("with root=" + lower.getRootNode().getAddress());
-				logger.debug("with:" + lower);
+				logger.debug("with root= " + lower.getRootNode().getAddress());
+				logger.debug("with: " + lower);
 				Tree merged = local.merge(lower);
 				if (merged.keySet().contains(merged.getPointer().down1()))
 					merged.go(BasicOperator.DOWN_1);
-				result.add(merged);
+//				logger.warn(ANSI_RED+"AA DANGEROUS test new ashraf!"+ANSI_RESET);
+				// AA for all trees in prematureTreeCopies, merge them with local and also with lower, and add to result.
+				for (Tree prematureTreeCopy : prematureTreeCopies) {
+					Tree merged2 = prematureTreeCopy.merge(merged);
+					if (merged2.keySet().contains(merged2.getPointer().down1()))
+						merged2.go(BasicOperator.DOWN_1);
+					result.add(merged2);
+				}
+//				logger.warn(ANSI_RED+"AA ashraf commented out below!"+ANSI_RESET);
+//				logger.trace("merged is: " + merged);
+				result.add(merged); // todo commented out just now!!!!!
+//				result.add(merged.merge(cop))
+//					Tree merged2 = prematureTreeCopy.merge(merged);
+//					if (merged2.keySet().contains(merged2.getPointer().down1()))
+//						merged2.go(BasicOperator.DOWN_1);
+//					result.add(merged2);
+//				logger.info(ANSI_GREEN+"abstraction order " + abstractionOrder + ANSI_RESET);
+//				abstractionOrder++;
+//				logger.info("added: " + merged);
+//				logger.trace("ashraf size result size: " + result.size());
 			}
 		}
 
 		return result;
 	}
+
+
 
 	/**
 	 * Constructs all lambda abstractions of this TTRFormula based on (lambda) abstracting out something of the type specified by
